--- a/src/SampleTopshelfService/SampleTopshelfService.csproj
+++ b/src/SampleTopshelfService/SampleTopshelfService.csproj
@@ -4,23 +4,21 @@
     <TargetFrameworks>net452;netcoreapp2.0</TargetFrameworks>
     <DebugType>portable</DebugType>
     <IsPackable>false</IsPackable>
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.0' ">
     <DefineConstants>$(DefineConstants);NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Serilog" Version="2.6.0" />
-    <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1" />
+    <PackageReference Include="Serilog" Version="2.6.0"/>
+    <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1"/>
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <Reference Include="System"/>
+    <Reference Include="System.Core"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Topshelf.Serilog\Topshelf.Serilog.csproj" />
-    <ProjectReference Include="..\Topshelf\Topshelf.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\Topshelf.Serilog\Topshelf.Serilog.csproj"/>
+    <ProjectReference Include="..\Topshelf\Topshelf.csproj"/>
   </ItemGroup>
 </Project>
