--- a/src/Topshelf.Extensions.Configuration.Tests/Topshelf.Extensions.Configuration.Tests.csproj
+++ b/src/Topshelf.Extensions.Configuration.Tests/Topshelf.Extensions.Configuration.Tests.csproj
@@ -5,7 +5,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <Reference Include="System" />
@@ -14,11 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Topshelf\Topshelf.csproj" />
     <ProjectReference Include="..\Topshelf.Extensions.Configuration\Topshelf.Extensions.Configuration.csproj" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions">
-      <Version>1.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration">
-      <Version>1.1.2</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="1.1.2"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.2"/>
   </ItemGroup>
 </Project>
