--- a/src/Topshelf.Extensions.Logging/Topshelf.Extensions.Logging.csproj
+++ b/src/Topshelf.Extensions.Logging/Topshelf.Extensions.Logging.csproj
@@ -18,13 +18,9 @@
     <ProjectReference Include="..\Topshelf\Topshelf.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.Extensions.Logging">
-      <Version>2.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.2"/>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
-    <PackageReference Include="Microsoft.Extensions.Logging">
-      <Version>1.1.2</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2"/>
   </ItemGroup>
 </Project>
