Add SystemEvents to netstandard ConsoleRunHost #519

--- a/src/TopShelf.ServiceInstaller/TopShelf.ServiceInstaller.csproj
+++ b/src/TopShelf.ServiceInstaller/TopShelf.ServiceInstaller.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="4.5.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="4.5.0" />
   </ItemGroup>
   
