--- a/src/Topshelf.Extensions.Configuration.Tests/Topshelf.Extensions.Configuration.Tests.csproj
+++ b/src/Topshelf.Extensions.Configuration.Tests/Topshelf.Extensions.Configuration.Tests.csproj
@@ -1,20 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFrameworks>net452</TargetFrameworks>
-    <DebugType>portable</DebugType>
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
+
   <ItemGroup>
+    <PackageReference Include="Appveyor.TestLogger" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-*" PrivateAssets="All" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Topshelf\Topshelf.csproj" />
     <ProjectReference Include="..\Topshelf.Extensions.Configuration\Topshelf.Extensions.Configuration.csproj" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.2" />
   </ItemGroup>
+  
 </Project>
