--- a/src/TopShelf.ServiceInstaller/TopShelf.ServiceInstaller.csproj
+++ b/src/TopShelf.ServiceInstaller/TopShelf.ServiceInstaller.csproj
@@ -6,6 +6,11 @@
     <AssemblyOriginatorKeyFile>..\..\Topshelf.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageTags>Topshelf</PackageTags>
+    <Description>$(Description)</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-*" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.5.0" />
