--- a/src/Topshelf.Elmah/Topshelf.Elmah.csproj
+++ b/src/Topshelf.Elmah/Topshelf.Elmah.csproj
@@ -14,13 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-*" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Elmah" Version="1.2.2" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\Topshelf\Topshelf.csproj" />
   </ItemGroup>
