--- a/src/Topshelf.Extensions.Configuration/Topshelf.Extensions.Configuration.csproj
+++ b/src/Topshelf.Extensions.Configuration/Topshelf.Extensions.Configuration.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-*" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <ProjectReference Include="..\Topshelf\Topshelf.csproj" />
   </ItemGroup>
 
